NewArchive/16b25ced2f8b51d344da50443a3039b2-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main()’:
main.cpp:17:15: error: invalid initialization of non-const reference of type ‘Item&’ from an rvalue of type ‘Item’
     foo(Item{}); // Error
               ^
main.cpp:7:6: error: in passing argument 1 of ‘void foo(T&) [with T = Item]’
 void foo(T&)
      ^
